JumpScript/tests/baselines/reference/parserShorthandPropertyAssignment4.errors.txt
tests/cases/conformance/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment4.jump(1,13): error TS1005: ':' expected.


==== tests/cases/conformance/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment4.jump (1 errors) ====
    var v = { 0 };
                ~
!!! error TS1005: ':' expected.